--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,12 +1,42 @@
 <!DOCTYPE html>
+
 <html lang="en">
-
-<head>
-    <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8" />
     <title>Lasagna</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <h1>Lasagna</h1>
-</body>
+    <img
+      src="./images/lasagna.jpg"
+      alt="Lasagna picture"
+      height="350px"
+      width="500px"
+    />
+    <h5>Homemade lasagna</h5>
+    <p>
+      Prepare to be captivated, enchanted, and ultimately satiated as you dive
+      into the world of <strong>lasagna</strong> creation. This recipe is
+      <em>not just a meal</em>; it's a sensory journey, a celebration of taste
+      that transcends the ordinary and elevates your dining experience to
+      extraordinary heights.
+    </p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Lasagna noodles</li>
+        <li>Ground Beef</li>
+        <li>Tomato sauce</li>
+        <li>Vegetables</li>
+        <li>Ricotta cheese</li>
+    </ul>
+
+    <h2>Steps</h2>
+    <ol>
+        <li>Prepare and cook vegetables for the stuffing and let it rest</li>
+        <li>Cook sauce with ground beef and let it cool</li>
+        <li>When sauce is cold mount the lasagna alternating this way sauce -> noodles -> ricotta -> vegetable stuffing -> noodles</li>
+        <li>Cook in oven</li>
+    </ol>
+  </body>
 </html>
