--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <title>Lasagna</title>
   </head>
 
@@ -13,7 +13,7 @@
       alt="Lasagna picture"
       height="350px"
       width="500px"
-    />
+    >
     <h5>Homemade lasagna</h5>
     <p>
       Prepare to be captivated, enchanted, and ultimately satiated as you dive
