Reformat index page
Improved the format so every recipe doesn't show in the same line

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 
   <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/lasagna.html">Lasagna</a>
-    <a href="./recipes/tricolore-salad.html">Tricolore Salad</a>
+    <h3><a href="./recipes/lasagna.html">Lasagna</a></h3>
+    <h3><a href="./recipes/tricolore-salad.html">Tricolore Salad</a></h3>
+    <h3><a href="./recipes/milanesa.html">Milanesa</a></h3>
   </body>
 </html>
