Add return to home
Added functionality to let the user see more recipies

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -38,5 +38,6 @@
         <li>When sauce is cold mount the lasagna alternating this way sauce -> noodles -> ricotta -> vegetable stuffing -> noodles</li>
         <li>Cook in oven</li>
     </ol>
+    <p><a href="../index.html">See other recipes</a></p>
   </body>
 </html>
