--- a/recipes/milanesa.html
+++ b/recipes/milanesa.html
@@ -32,6 +32,6 @@
         <li>One slice at the time, cover the meet with the breadcrumbs</li>
         <li>Fry the milanesas or cook them in the oven</li>
     </ol>
-  </body>
+    <p><a href="../index.html">See other recipes</a></p>
 </body>
 </html>
