--- a/recipes/tricolore-salad.html
+++ b/recipes/tricolore-salad.html
@@ -29,5 +29,7 @@
       <li>Mix them in a bowl</li>
       <li>Season with the italian dressing</li>
     </ol>
+
+    <p><a href="../index.html">See other recipes</a></p>
   </body>
 </html>
