Add CSS styling to page

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
   <head>
     <meta charset="utf-8" />
     <title>odin-recipes</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
 
   <body>
-    <h1>Odin Recipes</h1>
-    <h3><a href="./recipes/lasagna.html">Lasagna</a></h3>
-    <h3><a href="./recipes/tricolore-salad.html">Tricolore Salad</a></h3>
-    <h3><a href="./recipes/milanesa.html">Milanesa</a></h3>
+    <h1 class="title">Odin Recipes</h1>
+    <h2><a href="./recipes/lasagna.html" class="recipe-link">Lasagna</a></h3>
+    <h2><a href="./recipes/tricolore-salad.html" class="recipe-link">Tricolore Salad</a></h3>
+    <h2><a href="./recipes/milanesa.html" class="recipe-link">Milanesa</a></h3>
   </body>
 </html>
