--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,26 +4,25 @@
   <head>
     <meta charset="utf-8">
     <title>Lasagna</title>
+    <link rel="stylesheet" href="../styles.css">
   </head>
 
   <body>
-    <h1>Lasagna</h1>
+    <h1 class="title">Lasagna</h1>
     <img
       src="./images/lasagna.jpg"
       alt="Lasagna picture"
-      height="350px"
-      width="500px"
     >
     <h5>Homemade lasagna</h5>
-    <p>
+    <p class="description">
       Prepare to be captivated, enchanted, and ultimately satiated as you dive
       into the world of <strong>lasagna</strong> creation. This recipe is
       <em>not just a meal</em>; it's a sensory journey, a celebration of taste
       that transcends the ordinary and elevates your dining experience to
       extraordinary heights.
     </p>
-    <h2>Ingredients</h2>
-    <ul>
+    <h2 class="subtitle">Ingredients</h2>
+    <ul class="list">
         <li>Lasagna noodles</li>
         <li>Ground Beef</li>
         <li>Tomato sauce</li>
@@ -31,8 +30,8 @@
         <li>Ricotta cheese</li>
     </ul>
 
-    <h2>Steps</h2>
-    <ol>
+    <h2 class="subtitle">Steps</h2>
+    <ol class="list">
         <li>Prepare and cook vegetables for the stuffing and let it rest</li>
         <li>Cook sauce with ground beef and let it cool</li>
         <li>When sauce is cold mount the lasagna alternating this way sauce -> noodles -> ricotta -> vegetable stuffing -> noodles</li>
