--- a/recipes/milanesa.html
+++ b/recipes/milanesa.html
@@ -3,20 +3,19 @@
 
 <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="../styles.css">
     <title>Milanesa</title>
 </head>
 
 <body>
-    <h1>Milanesa</h1>
+    <h1 class="title">Milanesa</h1>
     <img
       src="./images/milanesa.jpg"
       alt="Milanesa picture"
-      height="350px"
-      width="500px"
     >
     <h5>Milanesa</h5>
-    <p>Indulge in the Argentine culinary tradition with <strong>Milanesa</strong>, a beloved dish that elevates the simple charm of breaded and fried meat. In this iconic recipe, thin slices of beef or chicken are delicately coated in breadcrumbs, creating a crispy golden exterior that gives way to tender, flavorful goodness. Served with a wedge of lemon, Milanesa is a classic Argentine comfort food, satisfying both the palate and the soul with its delicious simplicity. Get ready to savor a taste of Argentina's culinary heritage in every delightful bite.</p>
-    <h2>Ingredients</h2>
+    <p class="description">Indulge in the Argentine culinary tradition with <strong>Milanesa</strong>, a beloved dish that elevates the simple charm of breaded and fried meat. In this iconic recipe, thin slices of beef or chicken are delicately coated in breadcrumbs, creating a crispy golden exterior that gives way to tender, flavorful goodness. Served with a wedge of lemon, Milanesa is a classic Argentine comfort food, satisfying both the palate and the soul with its delicious simplicity. Get ready to savor a taste of Argentina's culinary heritage in every delightful bite.</p>
+    <h2 class="subtitle">Ingredients</h2>
     <ul>
         <li>Beef or chicken</li>
         <li>Eggs</li>
@@ -24,7 +23,7 @@
         <li>Breadcrumbs</li>
     </ul>
 
-    <h2>Steps</h2>
+    <h2 class="subtitle">Steps</h2>
     <ol>
         <li>Thin slice the meat</li>
         <li>Season the breadcrumbs with salt and pepper</li>
