--- a/recipes/tricolore-salad.html
+++ b/recipes/tricolore-salad.html
@@ -2,20 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="../styles.css">
     <title>Tricolore Salad</title>
   </head>
 
   <body>
-    <h1>Tricolore Salad</h1>
-    <img src="./images/tricolore-salad.jpg" alt="tricolore salad picture" height="500px" width="300px"/>
+    <h1 class="title">Tricolore Salad</h1>
+    <img src="./images/tricolore-salad.jpg" alt="tricolore salad picture"/>
     <h5>Tricolore salad</h5>
-    <p>
+    <p class="description">
       Italy's famous <strong>Insalata Tricolore</strong> represents the colors
       of the Italian flag. A fantastic salad with an exciting trio of lettuces
       and a vibrant lemon vinaigrette. This is my FAVORITE salad for any
       occasion and the BEST salad to serve with an Italian meal.
     </p>
-    <h2>Ingredients</h2>
+    <h2 class="subtitle">Ingredients</h2>
     <ul>
       <li>Arugula</li>
       <li>Endive</li>
@@ -23,7 +24,7 @@
       <li>Italian Dressing</li>
     </ul>
 
-    <h2>Steps</h2>
+    <h2 class="subtitle">Steps</h2>
     <ol>
       <li>Chop the vegetables</li>
       <li>Mix them in a bowl</li>
